# mock-fake-generator

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  mock_fake_generator_design_ket_v1_1.md
.github/workflows/: ci.yml  release-container.yml
cmake/: MockFakeGenInstallSmoke.cmake  MockFakeGenOptions.cmake
docker/: Dockerfile  mockfakegen-entrypoint.sh
docs/: dependency_inventory.md  user_guide.md
scripts/: mockfakegen-docker
src/: CompilationResolver.cpp  CompilationResolver.h  Config.cpp  Config.h  FormatStyle.cpp  FormatStyle.h  HeaderScanner.cpp  HeaderScanner.h  Runner.cpp  ValidationMode.cpp  ValidationMode.h  main.cpp
src/clang/: .gitkeep  ClangDiagnosticCollector.cpp  ClangDiagnosticCollector.h  ClassExtractor.cpp  ClassExtractor.h  SyntheticTuParser.cpp  SyntheticTuParser.h  TypeSpellingService.cpp  TypeSpellingService.h
src/diagnostics/: RunDiagnostic.cpp  RunDiagnostic.h
src/generator/: .gitkeep  CodeGenerator.cpp  CodeGenerator.h  GeneratedFormatter.cpp  GeneratedFormatter.h
src/model/: .gitkeep  GeneratedFile.cpp  GeneratedFile.h  ProjectModel.cpp  ProjectModel.h
src/output/: OutputWriter.cpp  OutputWriter.h
src/runtime_template/: .gitkeep  RuntimeTemplate.cpp  RuntimeTemplate.h
src/support/: .gitkeep  CliSupport.cpp  CliSupport.h
src/validation/: GeneratedCompileValidator.cpp  GeneratedCompileValidator.h  GeneratedOutputCheck.cpp  GeneratedOutputCheck.h  GenerationPolicy.cpp  GenerationPolicy.h
tests/clang/: clang_cmake_smoke.cpp  class_extractor_test.cpp  compilation_resolver_test.cpp  synthetic_tu_parser_test.cpp  type_spelling_service_test.cpp
tests/cli/: cli_e2e_test.cpp
tests/config/: config_cli_test.cpp
tests/diagnostics/: run_diagnostic_test.cpp
tests/fixtures/: .gitkeep  GoldenDiff.h
tests/fixtures/all_mocks/: all_mocks_generated_smoke_test.cpp  all_mocks_generation_test.cpp
tests/fixtures/all_mocks/product/: Alpha.cpp  Alpha.h  Beta.cpp  Beta.h
tests/fixtures/comma_type/: comma_type_generated_smoke_test.cpp  comma_type_generation_test.cpp
tests/fixtures/comma_type/product/: Hoge.h
tests/fixtures/cxx23_matrix/: README.md  cxx23_matrix_generated_smoke_test.cpp  cxx23_matrix_generation_test.cpp
tests/fixtures/cxx23_matrix/product/: Supported.h
tests/fixtures/default_argument/: default_argument_generated_smoke_test.cpp  default_argument_generation_test.cpp
tests/fixtures/default_argument/product/: Hoge.h
tests/fixtures/forwarding/: forwarding_generated_smoke_test.cpp  forwarding_generation_test.cpp
tests/fixtures/forwarding/product/: Forwarding.h
tests/fixtures/generated_runtime/: MockFakeRuntime.h
tests/fixtures/generated_runtime_default_return/: MockFakeRuntime.h
tests/fixtures/generated_runtime_global_mutex/: MockFakeRuntime.h
tests/fixtures/generated_runtime_shared_owner/: MockFakeRuntime.h
tests/fixtures/generated_runtime_throw/: MockFakeRuntime.h
tests/fixtures/hoge/: hoge_ast_e2e_test.cpp  hoge_fixture_generation_test.cpp  hoge_generated_smoke_test.cpp
tests/fixtures/hoge/product/: Hoge.cpp  Hoge.h
tests/fixtures/interface_mock/: interface_mock_generated_smoke_test.cpp  interface_mock_generation_test.cpp
tests/fixtures/interface_mock/product/: IStorage.h
tests/fixtures/namespaced/: namespaced_generated_smoke_test.cpp  namespaced_generation_test.cpp
tests/fixtures/namespaced/product/: Hoge.h
tests/fixtures/overload/: overload_generated_smoke_test.cpp  overload_generation_test.cpp
tests/fixtures/overload/product/: Hoge.h
tests/fixtures/qualified_collision/: qualified_collision_generated_smoke_test.cpp  qualified_collision_generation_test.cpp
tests/fixtures/qualified_collision/product/a/: Hoge.h
tests/fixtures/qualified_collision/product/b/: Hoge.h
tests/fixtures/qualifier/: qualifier_generated_smoke_test.cpp  qualifier_generation_test.cpp
tests/fixtures/qualifier/product/: Hoge.h
tests/fixtures/registry_modes/: registry_modes_generation_test.cpp
tests/fixtures/registry_modes/global_mutex/: global_mutex_generated_smoke_test.cpp
tests/fixtures/registry_modes/global_mutex/product/: GlobalWorker.h
tests/fixtures/registry_modes/shared_owner/: shared_owner_generated_smoke_test.cpp
tests/fixtures/registry_modes/shared_owner/product/: SharedWorker.h
tests/fixtures/reporting/: reporting_generated_smoke_test.cpp  reporting_generation_test.cpp
tests/fixtures/reporting/product/: Service.h
tests/fixtures/special_member/: special_member_generated_smoke.cpp  special_member_generation_test.cpp
tests/fixtures/special_member/product/: Special.h
tests/fixtures/static_data/: static_data_generated_smoke_test.cpp  static_data_generation_test.cpp
tests/fixtures/static_data/product/: StaticData.h
tests/fixtures/static_method/: static_method_generated_smoke_test.cpp  static_method_generation_test.cpp
tests/fixtures/static_method/product/: Hoge.h
tests/fixtures/unsupported_diagnostics/: unsupported_diagnostics_generation_test.cpp
tests/fixtures/unsupported_diagnostics/product/: Interface.h  Unsupported.h
tests/foundation/: foundation_smoke.cpp
tests/generator/: code_generator_test.cpp  generated_formatter_test.cpp
tests/model/: generated_file_test.cpp  project_model_test.cpp
tests/output/: output_writer_test.cpp
tests/runtime/: mock_fake_runtime_default_return_header_smoke.cpp  mock_fake_runtime_global_mutex_header_smoke.cpp  mock_fake_runtime_header_smoke.cpp  mock_fake_runtime_shared_owner_header_smoke.cpp  mock_fake_runtime_throw_header_smoke.cpp  runtime_template_test.cpp
tests/scanner/: header_scanner_test.cpp
tests/validation/: generated_compile_validator_test.cpp  generated_output_check_test.cpp  generation_policy_test.cpp
tools/: format.py
